# cc-sample-code

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml
examples/chapter01/.claude/: settings.json
examples/chapter02/: CLAUDE.md
examples/chapter02/mcp-server_minimal/python/: README.md  pyproject.toml
examples/chapter02/mcp-server_minimal/python/src/: __init__.py  server.py
examples/chapter02/mcp-server_minimal/typescript/: README.md  eslint.config.js  package.json
examples/chapter02/mcp-server_minimal/typescript/src/: index.ts
examples/chapter02/mcp-server_qiita/python/: README.md  pyproject.toml
examples/chapter02/mcp-server_qiita/python/src/: __init__.py  qiita.py  qiita_test.py  server.py
examples/chapter02/mcp-server_qiita/python/tests/: __init__.py  integration_test.py
examples/chapter02/mcp-server_qiita/typescript/: IMPLEMENTATION_PLAN.md  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
examples/chapter02/mcp-server_qiita/typescript/src/: index.ts  integration-test.ts  qiita.test.ts  qiita.ts
examples/chapter03/.claude/agents/: multi-perspective-analyzer.md
examples/chapter04/.claude/: CLAUDE.md
examples/chapter04/.claude/commands/: rebase.md  sample-A.md
examples/chapter04/.claude/skills/git-message-guide/references/: conventional-commits.md  pr-template.md
examples/chapter05/.claude/: settings.json
examples/chapter05/.claude/commands/: rebase.md  sample-B.md
examples/chapter05/.claude/shell/: EnforceDraftPR.sh  RandomSleep.sh  RunLinter.sh
plugins/auto-ruff/hooks/: hooks.json
plugins/auto-ruff/shell/: RunLinter.sh
plugins/force-draft-pr/hooks/: hooks.json
plugins/force-draft-pr/shell/: EnforceDraftPR.sh
